<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryDark"
    tools:context="com.saifkhichi.books.ui.activity.BookDetailsActivity">

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:elevation="0dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryDark"
        app:layout_scrollFlags="scroll"/>

  </com.google.android.material.appbar.AppBarLayout>

  <RelativeLayout
      android:id="@+id/swipe_refresh"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?actionBarSize"
      android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="82dp"
        android:layout_marginBottom="-16dp"
        android:paddingBottom="16dp"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp">

      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="82dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            android:paddingVertical="@dimen/activity_vertical_margin"
            android:orientation="vertical">

          <com.google.android.material.button.MaterialButton
              style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
              android:id="@+id/book_category"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="?attr/colorAccent"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"/>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Caption"
              android:id="@+id/book_authors"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:gravity="center"/>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Headline6"
              android:id="@+id/book_title"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:gravity="center"
              android:textColor="?attr/colorAccent"/>

          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="?attr/colorPrimary"
              android:layout_marginVertical="16dp"/>

          <com.google.android.material.card.MaterialCardView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              app:cardBackgroundColor="#1f888888"
              app:cardCornerRadius="8dp"
              app:contentPadding="8dp"
              app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:paddingHorizontal="2dp"
                  android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:maxLines="1"
                    android:gravity="center"
                    android:text="@string/label_book_pages"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:id="@+id/book_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:gravity="center"/>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center_horizontal"
                  android:paddingHorizontal="2dp"
                  android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/label_book_format"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:id="@+id/book_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:gravity="center"/>

              </LinearLayout>

              <LinearLayout
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:paddingHorizontal="2dp"
                  android:gravity="center_horizontal"
                  android:layout_weight="1">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/label_book_language"/>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:id="@+id/book_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:gravity="center"/>

              </LinearLayout>

            </LinearLayout>

          </com.google.android.material.card.MaterialCardView>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Caption"
              android:id="@+id/book_publisher"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start"
              android:layout_marginTop="16dp"/>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Caption"
              android:id="@+id/book_isbn"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start"/>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Body1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start"
              android:layout_marginTop="16dp"
              android:text="@string/label_book_description"
              android:textStyle="bold"/>

          <com.google.android.material.textview.MaterialTextView
              style="@style/TextAppearance.MaterialComponents.Body2"
              android:id="@+id/book_description"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="start"
              tools:text="@tools:sample/lorem/random"/>

          <androidx.appcompat.widget.AppCompatImageView
              android:id="@+id/book_barcode"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="32dp"
              android:scaleType="fitXY"/>

        </LinearLayout>

      </ScrollView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="1dp"
        app:cardCornerRadius="8dp">

      <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/book_cover"
          android:layout_width="112dp"
          android:layout_height="164dp"
          android:scaleType="centerCrop"
          app:srcCompat="@drawable/placeholder_book_cover"/>

    </com.google.android.material.card.MaterialCardView>

  </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>